2005-10-25  Vincent Untz  <vuntz@gnome.org>

	* foundation.gnome.org/vote/include/election-sql.php: updated for SQL
	change
	* foundation.gnome.org/vote/include/step1-login.php: fix grammar
	* foundation.gnome.org/vote/include/step3-confirm.php: accept votes
	:-)

2005-10-25  Vincent Untz  <vuntz@gnome.org>

	* foundation.gnome.org/vote/include/election-sql.php: use correct name
	to connect to the db

2005-10-24  Vincent Untz  <vuntz@gnome.org>

	* foundation.gnome.org/vote/*: s/option/choice/, also rename the
	variable for the temporary token to tmp_token
	* foundation.gnome.org/vote/include/election-sql.php: make it possible
	to use a local configuration for testing

2005-10-24  Vincent Untz  <vuntz@gnome.org>

	* configure.in:
	* foundation.gnome.org/Makefile.am:
	* foundation.gnome.org/vote/*: add anonymous voting scripts

2005-10-20  Vincent Untz  <vuntz@gnome.org>

	* foundation.gnome.org/index.wml:
	* foundation.gnome.org/news/index.wml: add news item for referendum

	* foundation.gnome.org/referenda/2005-10/Makefile.am:
	* foundation.gnome.org/referenda/2005-10/index.wml:
	* foundation.gnome.org/referenda/2005-10/timeline.ics: add ical file

	* foundation.gnome.org/referenda/2005-10/voters.wml: updated

2005-10-18  Vincent Untz  <vuntz@gnome.org>

	* configure.in:
	* foundation.gnome.org/elections/2005:
	* foundation.gnome.org/elections/Makefile.am:
	* foundation.gnome.org/elections/index.wml:
	* foundation.gnome.org/referenda/2005-10:
	* foundation.gnome.org/referenda/Makefile.am
	* foundation.gnome.org/referenda/index.wml: add stuff for the next
	referendum and the next elections

	* foundation.gnome.org/elections/index.wml:
	* foundation.gnome.org/finance/index.wml:
	* foundation.gnome.org/licensing/guidelines/index.wml:
	* foundation.gnome.org/licensing/usergroup/index.wml: fix HTML

	* foundation.gnome.org/licensing/.cvsignore:
	* foundation.gnome.org/licensing/guidelines/.cvsignore:
	* foundation.gnome.org/licensing/usergroup/.cvsignore: new
