@@ -31,7 +31,7 @@
       <li>
 	Instructions explaining how to vote will be sent via e-mail to all
 	eligible voters on October 24, 2005, and votes must be returned by
-	November 4, 2005, 23:59 UTC (18:59 EST).
+	November 6, 2005, 23:59 UTC (18:59 EST).
       </li>
       <li>
 	Votes will be held confidential during the referendum, but an
@@ -55,7 +55,7 @@
         Any eligible voter may challenge the preliminary results by e-mailing
         <a
         href="mailto:elections&#64;gnome&#46;org">elections&#64;gnome&#46;org</a>
-        prior to November 11, 2005. The decision of the Elections Committee as
+        prior to November 13, 2005. The decision of the Elections Committee as
         to any challenge shall be final. Once any challenges have been
         resolved, the Elections Committee shall announce the final results.
       </li>
@@ -79,13 +79,13 @@
         October 24 (Monday): Instructions mailed to eligible voters, voting begins.
       </li>
       <li>
-        November 4 (Friday): Voting closes.
+        November 6 (Sunday): Voting closes.
       </li>
       <li>
-        November 5 (Saturday): Preliminary results are announced.
+        November 7 (Monday): Preliminary results are announced.
       </li>
       <li>
-        November 11 (Friday): Last day to challenge preliminary results.
+        November 13 (Sunday): Last day to challenge preliminary results.
       </li>
     </ul>
 
