@@ -5,11 +5,11 @@ VERSION:2.0
 BEGIN:VEVENT
 UID:20051020T082209Z-2839-500-1-6@localhost.localdomain
 DTSTAMP:20051020T082209Z
-DTSTART;VALUE=DATE:20051105
-DTEND;VALUE=DATE:20051106
+DTSTART;VALUE=DATE:20051107
+DTEND;VALUE=DATE:20051108
 SUMMARY:Preliminery Results Announced
 CREATED:20051020T090739
-LAST-MODIFIED:20051020T090739
+LAST-MODIFIED:20051025T203039
 DESCRIPTION:Preliminary results are announced.
 CLASS:PUBLIC
 TRANSP:OPAQUE
@@ -18,11 +18,11 @@ END:VEVENT
 BEGIN:VEVENT
 UID:20051020T082150Z-2839-500-1-5@localhost.localdomain
 DTSTAMP:20051020T082150Z
-DTSTART;VALUE=DATE:20051104
-DTEND;VALUE=DATE:20051105
+DTSTART;VALUE=DATE:20051106
+DTEND;VALUE=DATE:20051107
 SUMMARY:Ballots Must Be Returned
 CREATED:20051020T090739
-LAST-MODIFIED:20051020T090739
+LAST-MODIFIED:20051025T203039
 DESCRIPTION:Voting closes.
 CLASS:PUBLIC
 TRANSP:OPAQUE
@@ -31,11 +31,11 @@ END:VEVENT
 BEGIN:VEVENT
 UID:20051020T082242Z-2839-500-1-7@localhost.localdomain
 DTSTAMP:20051020T082242Z
-DTSTART;VALUE=DATE:20051111
-DTEND;VALUE=DATE:20051112
+DTSTART;VALUE=DATE:20051113
+DTEND;VALUE=DATE:20051114
 SUMMARY:Challenges to the Result Close
 CREATED:20051020T090739
-LAST-MODIFIED:20051020T090739
+LAST-MODIFIED:20051025T203039
 DESCRIPTION:Last day to challenge preliminary results.
 CLASS:PUBLIC
 TRANSP:OPAQUE
