@@ -16,8 +16,6 @@
       <a href="mailto:elections&#64;gnome&#46;org">elections&#64;gnome&#46;org</a>.
     </p>
 
-    <p>This list is not complete and might change.</p>
-
     <ul>
       <li>Aaron Bockover</li>
       <li>Aaron Weber</li>
@@ -31,6 +29,8 @@
       <li>Alan Horkan</li>
       <li>Alastair McKinstry</li>
       <li>Alejandro Sánchez Acosta</li>
+      <li>Alessio Dessi</li>
+      <li>Alessio Frusciante</li>
       <li>Alexander Kirillov</li>
       <li>Alexander Larsson</li>
       <li>Alexander Shopov</li>
@@ -57,6 +57,7 @@
       <li>Archit Baweja</li>
       <li>Ariel Rios</li>
       <li>Arvind Samptur</li>
+      <li>Baptiste Mille-Mathias</li>
       <li>Baris Cicek</li>
       <li>Bastien Nocera</li>
       <li>Behdad Esfahbod</li>
@@ -82,6 +83,7 @@
       <li>Chris Ridpath</li>
       <li>Christian Fredrik Kalager Schaller</li>
       <li>Christian Kellner</li>
+      <li>Christian Meyer</li>
       <li>Christian Neumair</li>
       <li>Christian Persch</li>
       <li>Christian Rose</li>
@@ -123,6 +125,7 @@
       <li>Erik Walthinsen</li>
       <li>Erwann Chénedé</li>
       <li>Eugene O'Connor</li>
+      <li>Everson Santos Araujo</li>
       <li>Farzaneh Sarafraz</li>
       <li>Federico Mena Quintero</li>
       <li>Fernando Herrera</li>
@@ -134,6 +137,7 @@
       <li>Frank Rehberger</li>
       <li>Frédéric Crozat</li>
       <li>Frederico Souza da Camara</li>
+      <li>Fredrik Hedberg</li>
       <li>Gaël Chamoulaud</li>
       <li>Gareth Owen</li>
       <li>Gary Ekker</li>
@@ -197,12 +201,14 @@
       <li>Jon Trowbridge</li>
       <li>Jordi Mallach</li>
       <li>Jordi Mas i Hernànde</li>
+      <li>Jorge Bernal</li>
       <li>Jörgen Scheibengruber</li>
       <li>Jorn Baayen</li>
       <li>José Carlos Marcos</li>
       <li>JP Rosevear</li>
       <li>Jukka-Pekka Iivonen</li>
       <li>Julio M. Merino Vidal</li>
+      <li>Kalle Vahlman</li>
       <li>Kalpesh Shah</li>
       <li>Kaushal Kumar</li>
       <li>Keith Packard</li>
@@ -333,17 +339,20 @@
       <li>Steve Fox</li>
       <li>Steve Hall</li>
       <li>Sven Herzberg</li>
+      <li>Sven Neumann</li>
       <li>Ted Gould</li>
       <li>Telsa Gwynne</li>
       <li>Theppitak Karoonboonyanan</li>
       <li>Thomas Friehoff</li>
       <li>Thomas Vander Stichele</li>
       <li>Thomas Wood</li>
+      <li>Tiago Cardoso Menezes</li>
       <li>Timothy Ney</li>
       <li>Timur Bakeyev</li>
       <li>Todd Kulesza</li>
       <li>Tomas Frydrych</li>
       <li>Tomas Ögren</li>
+      <li>Tomislav Markovski</li>
       <li>Tommi Vainikainen</li>
       <li>Toni Willberg</li>
       <li>Trinh Minh Thanh</li>
@@ -365,7 +374,7 @@
     </ul>
 
     <p>
-      343 voters
+      354 voters
     </p>
 
 </body>
