@@ -1,5 +1,14 @@
 2005-10-25  Vincent Untz  <vuntz@gnome.org>
 
+	* foundation.gnome.org/referenda/2005-10/rules.wml: updated the
+	timeline
+	* foundation.gnome.org/referenda/2005-10/timeline.ics: ditto
+	* foundation.gnome.org/referenda/2005-10/voters.wml: final list
+	* foundation.gnome.org/vote/include/step4-commit.php: add some
+	mysql_error()...
+
+2005-10-25  Vincent Untz  <vuntz@gnome.org>
+
 	* foundation.gnome.org/vote/include/election-sql.php: updated for SQL
 	change
 	* foundation.gnome.org/vote/include/step1-login.php: fix grammar
